<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.CoachActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="@dimen/coach_figure"
        android:layout_height="@dimen/coach_figure"
        android:layout_marginTop="@dimen/dp_15"
        android:layout_marginLeft="@dimen/dp_15"
        android:src="@color/orange"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/imageView"
        android:layout_alignTop="@id/imageView"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginLeft="@dimen/dp_30"
        android:textSize="@dimen/intro_text"
        android:text="王"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/imageView"
        android:layout_alignLeft="@id/textView"
        android:layout_marginBottom="@dimen/dp_10"
        android:textSize="@dimen/intro_text"
        android:text="器械"/>

    <View
        android:id="@+id/split_line"
        android:layout_height="2dp"
        android:layout_width="match_parent"
        android:background="@color/splitline"
        android:layout_below="@id/imageView"
        android:layout_marginTop="@dimen/dp_15"
        android:layout_marginLeft="@dimen/dp_15"
        android:layout_marginRight="@dimen/dp_15"
        />


    <TextView
        android:id="@+id/textView3"
        android:layout_below="@id/split_line"
        android:layout_marginTop="@dimen/dp_15"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp_30"
        android:textSize="@dimen/contact_text"
        android:layout_centerHorizontal="true"
        android:text="@string/contactCoach"/>

    <LinearLayout
        android:id="@+id/linear1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView3"
        android:layout_marginTop="@dimen/dp_15"
        android:layout_marginLeft="@dimen/dp_15"
        android:layout_marginRight="@dimen/dp_15"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="@dimen/contact_img"
                android:layout_height="@dimen/contact_img"
                android:layout_centerHorizontal="true"
                android:focusable="true"
                android:onClick="makeCall"
                android:src="@mipmap/b_call"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/imageView2"
                android:layout_marginTop="@dimen/dp_4"
                android:textSize="@dimen/contact_text"
                android:text="@string/make_call"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="@dimen/contact_img"
                android:layout_height="@dimen/contact_img"
                android:layout_centerHorizontal="true"
                android:focusable="true"
                android:onClick="sendMail"
                android:src="@mipmap/b_mail"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/imageView3"
                android:layout_marginTop="@dimen/dp_4"
                android:textSize="@dimen/contact_text"
                android:text="@string/send_mail"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="@dimen/contact_img"
                android:layout_height="@dimen/contact_img"
                android:layout_centerHorizontal="true"
                android:focusable="true"
                android:onClick="sendMSG"
                android:src="@mipmap/b_msg"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/imageView4"
                android:layout_marginTop="@dimen/dp_4"
                android:textSize="@dimen/contact_text"
                android:text="@string/send_msg"/>
        </RelativeLayout>
    </LinearLayout>

    <View
        android:id="@+id/split_line2"
        android:layout_height="2dp"
        android:layout_width="match_parent"
        android:background="@color/splitline"
        android:layout_below="@id/linear1"
        android:layout_marginTop="@dimen/dp_30"
        android:layout_marginLeft="@dimen/dp_15"
        android:layout_marginRight="@dimen/dp_15"
        />


    <TextView
        android:id="@+id/textView7"
        android:layout_below="@id/split_line2"
        android:layout_marginTop="@dimen/dp_15"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp_30"
        android:textSize="@dimen/contact_text"
        android:layout_centerHorizontal="true"
        android:text="@string/teachingCourses"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/view_teaching"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView7"
        android:layout_above="@id/navigation"
        android:layout_marginLeft="@dimen/dp_15"
        android:layout_marginRight="@dimen/dp_15"/>

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:menu="@menu/navigation"/>

</RelativeLayout>